# LibtorchDetection

./: .gitignore  CMakeLists.txt  README.md  libtorch_detection.vcxproj  libtorch_detection.vcxproj.filters
dataset/train/labels/: 2007_001586.xml  2007_001609.xml  2007_001678.xml  2007_001717.xml  2007_001764.xml  2007_001872.xml  2007_001960.xml  2007_002088.xml  2007_002119.xml  2007_002212.xml  2007_002262.xml  2007_002284.xml  2007_002370.xml  2007_002403.xml  2007_002462.xml  2007_002565.xml  2007_002624.xml  2007_002669.xml  2007_002823.xml  2007_002896.xml  2007_002967.xml  2007_003051.xml  2007_003106.xml  2007_003137.xml  2007_003189.xml  2007_003267.xml  2007_003367.xml  2007_003503.xml  2007_003541.xml  2007_003587.xml  2007_003659.xml  2007_003715.xml  2007_003786.xml  2007_003848.xml  2007_003910.xml  2007_004003.xml  2007_004065.xml  2007_004133.xml  2007_004193.xml
dataset/val/labels/: 2007_004275.xml  2007_004380.xml  2007_004454.xml  2007_004483.xml  2007_004538.xml  2007_004663.xml  2007_004722.xml  2007_004810.xml  2007_004866.xml  2007_004988.xml  2007_005064.xml  2007_005124.xml  2007_005206.xml  2007_005262.xml  2007_005294.xml  2007_005331.xml  2007_005405.xml
src/: DetDataset.cpp  DetDataset.h  Detector.cpp  main.cpp
src/models/: yolo_training.cpp
src/ui/: canvas.cpp  canvas.h  icons.qrc  labeltool.cpp  labeltool.h  labeltool.ui  lableTool.pro  main.cpp
src/ui/managers/: annotationmanager.cpp  annotationmanager.h  colormanager.cpp  colormanager.h  labelmanager.cpp  labelmanager.h
src/ui/widgets/: customlistwidget.cpp  labeldialog.cpp  labeldialog.h  (+1 more)
